pkg/lang/testdata/ub/constraints/invalid/duplicate-key.ub
constraints: [
  { kind: required-together, fields: [var.a], fields: [var.b] },
]
